@@ -92,7 +92,7 @@
                           <FlowLayout Orientation="Vertical" ItemAlignment="Near"/>
                         </Layout>
                         <Children>
-                          <Text Content="myForecast v1.0.9" Font="[FontBoldAppName]" Color="White"/>
+                          <Text Content="myForecast v1.1.0" Font="[FontBoldAppName]" Color="White"/>
                           <Text Content="Copyright &#169; 2016-2020 by Chavdar Kostov" Font="[FontBoldAboutText]" Color="White"/>
                           <Text Content="[CodeLocalizationModel.Items.#ui_AboutLicense!core:String]" Font="[FontBoldAboutText]" Color="White" MaximumSize="700,0" WordWrap="true" Margins="0,20,0,0"/>
                           <Text Name="TextIconSetBy" Content="null" Font="[FontBoldAboutText]" Color="White" MaximumSize="700,0" WordWrap="true"/>
