@@ -33,11 +33,11 @@ You need the **geo coords** which are under each search result, for New York Cit
 When you configure myForecast, please enter the full location coordinates, i.e. **40.7143,-74.006**
 
 ## Screenshots
-![MyForecastDaily](https://user-images.githubusercontent.com/15143882/81483585-e05df580-9204-11ea-9fda-582552cbc3f0.png)
+<img src="https://user-images.githubusercontent.com/15143882/81483585-e05df580-9204-11ea-9fda-582552cbc3f0.png" alt="Daily forecast" width="914"/><br/>
 - Weather alerts (if present for your location) can be viewed by clicking on the exclamation point icon.
 - Use the location name configuration settings to setup a custom location name.
 
-![MyForecastHourly](https://user-images.githubusercontent.com/15143882/81483592-e6ec6d00-9204-11ea-9e82-aa699960b4f0.png)
+<img src="https://user-images.githubusercontent.com/15143882/81483592-e6ec6d00-9204-11ea-9e82-aa699960b4f0.png" alt="Hourly forecast" width="914"/><br/>
 - Current weather condition panel acts as a button, when clicked the daily forecast will be replaced by hourly forecast weather data (36 hours ahead). You can use the left/right button on the remote control to scroll thru the data. To go back to the default layout just click again on the current weather condition panel. The scheduled data refresh will also restore the default layout.
 
 ## Feedback
