@@ -12,8 +12,8 @@
 <!-- will be used later on in this file.                                                                 -->
 
 <!-- Change Property_ProductVersion/Property_ProductCode for each release -->
-<?define Property_ProductVersion = "1.0.9.0" ?>
-<?define Property_ProductCode = "f44318c2-8a9c-4c13-a840-316e88284daf" ?>
+<?define Property_ProductVersion = "1.1.0.0" ?>
+<?define Property_ProductCode = "dc853966-b87b-4a32-bbcf-d1ed79c538b9" ?>
 
 <!-- Never change Property_UpgradeCode -->
 <?define Property_UpgradeCode = "d595d99a-9882-474f-b783-f210a03d190a" ?>
